--- a/pubs.bib
+++ b/pubs.bib
@@ -1,40 +1,18 @@
- @article{1Murphy_2023, title={Transfer of statistical learning from passive speech perception to speech production}, ISSN={1531-5320}, url={http://dx.doi.org/10.3758/s13423-023-02399-8}, DOI={10.3758/s13423-023-02399-8}, journal={Psychonomic Bulletin &amp; Review}, publisher={Springer Science and Business Media LLC}, author={Murphy, Timothy K. and Nozari, Nazbanou and Holt, Lori L.}, year={2023}, month=oct }
+ @article{1Woolley_2023, title={Development of a Naïve Theory of Superstition}, volume={25}, ISSN={1532-7647}, url={http://dx.doi.org/10.1080/15248372.2023.2256871}, DOI={10.1080/15248372.2023.2256871}, number={1}, journal={Journal of Cognition and Development}, publisher={Informa UK Limited}, author={Woolley, Jacqueline D. and Baca, Paola A. and Kelley, Kelsey A.}, year={2023}, month=oct, pages={27–45} }
 
- @article{2Symons_2023, title={Informational masking influences segmental and suprasegmental speech categorization}, ISSN={1531-5320}, url={http://dx.doi.org/10.3758/s13423-023-02364-5}, DOI={10.3758/s13423-023-02364-5}, journal={Psychonomic Bulletin &amp; Review}, publisher={Springer Science and Business Media LLC}, author={Symons, A. E. and Holt, L. L. and Tierney, A. T.}, year={2023}, month=sep }
+ @article{2Li_2023, title={Exploring factors influencing young children’s learning from storybooks: Interactive and multimedia features}, volume={233}, ISSN={0022-0965}, url={http://dx.doi.org/10.1016/j.jecp.2023.105680}, DOI={10.1016/j.jecp.2023.105680}, journal={Journal of Experimental Child Psychology}, publisher={Elsevier BV}, author={Li, Hui and Zhang, Ting and Woolley, Jacqueline D. and An, Jing and Wang, Fuxing}, year={2023}, month=sep, pages={105680} }
 
- @article{3Obasih_2023, title={Auditory category learning is robust across training regimes}, volume={237}, ISSN={0010-0277}, url={http://dx.doi.org/10.1016/j.cognition.2023.105467}, DOI={10.1016/j.cognition.2023.105467}, journal={Cognition}, publisher={Elsevier BV}, author={Obasih, Chisom O. and Luthra, Sahil and Dick, Frederic and Holt, Lori L.}, year={2023}, month=aug, pages={105467} }
+ @article{3Nissel_2023, title={Three Men Make a Tiger: The Effect of Consensus Testimony on Chinese and U.S. Children’s Judgments about Possibility}, volume={23}, ISSN={1568-5373}, url={http://dx.doi.org/10.1163/15685373-12340154}, DOI={10.1163/15685373-12340154}, number={1–2}, journal={Journal of Cognition and Culture}, publisher={Brill}, author={Nissel, Jenny and Li, Hui and Cramer, Amanda and Woolley, Jacqueline D.}, year={2023}, month=apr, pages={98–126} }
 
- @article{4Gabay_2023, title={Impaired and Spared Auditory Category Learning in Developmental Dyslexia}, volume={34}, ISSN={1467-9280}, url={http://dx.doi.org/10.1177/09567976231151581}, DOI={10.1177/09567976231151581}, number={4}, journal={Psychological Science}, publisher={SAGE Publications}, author={Gabay, Yafit and Roark, Casey L. and Holt, Lori L.}, year={2023}, month=feb, pages={468–480} }
+ @article{4Nissel_2022, title={Brave new world: Imaginative fictions offer simulated safety and actual benefits}, volume={45}, ISSN={1469-1825}, url={http://dx.doi.org/10.1017/s0140525x21002284}, DOI={10.1017/s0140525x21002284}, journal={Behavioral and Brain Sciences}, publisher={Cambridge University Press (CUP)}, author={Nissel, Jenny E. and Woolley, Jacqueline D.}, year={2022} }
 
- @article{5Gabay_2023, title={Memory for incidentally learned categories evolves in the post-learning interval}, volume={12}, ISSN={2050-084X}, url={http://dx.doi.org/10.7554/elife.81855}, DOI={10.7554/elife.81855}, journal={eLife}, publisher={eLife Sciences Publications, Ltd}, author={Gabay, Yafit and Karni, Avi and Holt, Lori L}, year={2023}, month=mar }
+ @article{5Dore_2022, title={Never trust a stranger: Effects of explicit belief statements from strangers on children’s reality status beliefs and beliefs about consensus}, volume={41}, ISSN={2044-835X}, url={http://dx.doi.org/10.1111/bjdp.12437}, DOI={10.1111/bjdp.12437}, number={2}, journal={British Journal of Developmental Psychology}, publisher={Wiley}, author={Dore, Rebecca A. and Woolley, Jacqueline and Nissel, Jenny and Hixon, John G.}, year={2022}, month=nov, pages={117–127} }
 
- @article{6Gabay_2022, title={Incidental auditory category learning and visuomotor sequence learning do not compete for cognitive resources}, volume={85}, ISSN={1943-393X}, url={http://dx.doi.org/10.3758/s13414-022-02616-x}, DOI={10.3758/s13414-022-02616-x}, number={2}, journal={Attention, Perception, &amp; Psychophysics}, publisher={Springer Science and Business Media LLC}, author={Gabay, Yafit and Madlansacay, Michelle and Holt, Lori L.}, year={2022}, month=dec, pages={452–462} }
+ @article{6Li_2022, title={The impact of informant type on children’s animal knowledge learning}, volume={62}, ISSN={0885-2014}, url={http://dx.doi.org/10.1016/j.cogdev.2022.101162}, DOI={10.1016/j.cogdev.2022.101162}, journal={Cognitive Development}, publisher={Elsevier BV}, author={Li, Hui and Yu, Haoxue and Woolley, Jacqueline D. and Wu, Lihanjing}, year={2022}, month=apr, pages={101162} }
 
- @article{7Jasmin_2022, title={Short-term perceptual reweighting in suprasegmental categorization}, volume={30}, ISSN={1531-5320}, url={http://dx.doi.org/10.3758/s13423-022-02146-5}, DOI={10.3758/s13423-022-02146-5}, number={1}, journal={Psychonomic Bulletin &amp; Review}, publisher={Springer Science and Business Media LLC}, author={Jasmin, Kyle and Tierney, Adam and Obasih, Chisom and Holt, Lori}, year={2022}, month=aug, pages={373–382} }
+ @article{7Woolley_2021, title={Children’s Use of Testimony to Determine Reality Status}, volume={92}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.13500}, DOI={10.1111/cdev.13500}, number={3}, journal={Child Development}, publisher={Wiley}, author={Woolley, Jacqueline D. and Nissel, Jenny and Gilpin, Ansley T.}, year={2021}, month=jan }
 
- @article{8Roark_2022, title={Long-term priors constrain category learning in the context of short-term statistical regularities}, volume={29}, ISSN={1531-5320}, url={http://dx.doi.org/10.3758/s13423-022-02114-z}, DOI={10.3758/s13423-022-02114-z}, number={5}, journal={Psychonomic Bulletin &amp; Review}, publisher={Springer Science and Business Media LLC}, author={Roark, Casey L. and Holt, Lori L.}, year={2022}, month=may, pages={1925–1937} }
+ @article{8Ghossainy_2021, title={Epistemic Vigilance in Early Ontogeny: Children’s Use of Nonverbal Behavior to Detect Deception}, volume={19}, ISSN={1474-7049}, url={http://dx.doi.org/10.1177/1474704920986860}, DOI={10.1177/1474704920986860}, number={1}, journal={Evolutionary Psychology}, publisher={SAGE Publications}, author={Ghossainy, Maliki E. and Al-Shawaf, Laith and Woolley, Jacqueline D.}, year={2021}, month=jan, pages={147470492098686} }
 
- @article{9Wu_2022, title={Phonetic category activation predicts the direction and magnitude of perceptual adaptation to accented speech.}, volume={48}, ISSN={0096-1523}, url={http://dx.doi.org/10.1037/xhp0001037}, DOI={10.1037/xhp0001037}, number={9}, journal={Journal of Experimental Psychology: Human Perception and Performance}, publisher={American Psychological Association (APA)}, author={Wu, Yunan Charles and Holt, Lori L.}, year={2022}, month=sep, pages={913–925} }
-
- @article{10Rupp_2022, title={Neural responses in human superior temporal cortex support coding of voice representations}, volume={20}, ISSN={1545-7885}, url={http://dx.doi.org/10.1371/journal.pbio.3001675}, DOI={10.1371/journal.pbio.3001675}, number={7}, journal={PLOS Biology}, publisher={Public Library of Science (PLoS)}, author={Rupp, Kyle and Hect, Jasmine L. and Remick, Madison and Ghuman, Avniel and Chandrasekaran, Bharath and Holt, Lori L. and Abel, Taylor J.}, editor={Poeppel, David}, year={2022}, month=jul, pages={e3001675} }
-
- @article{11Roark_2022, title={The representational glue for incidental category learning is alignment with task-relevant behavior.}, volume={48}, ISSN={0278-7393}, url={http://dx.doi.org/10.1037/xlm0001078}, DOI={10.1037/xlm0001078}, number={6}, journal={Journal of Experimental Psychology: Learning, Memory, and Cognition}, publisher={American Psychological Association (APA)}, author={Roark, Casey L. and Lehet, Matthew I. and Dick, Frederic and Holt, Lori L.}, year={2022}, month=jun, pages={769–784} }
-
- @article{12Caras_2022, title={Non-sensory Influences on Auditory Learning and Plasticity}, volume={23}, ISSN={1438-7573}, url={http://dx.doi.org/10.1007/s10162-022-00837-3}, DOI={10.1007/s10162-022-00837-3}, number={2}, journal={Journal of the Association for Research in Otolaryngology}, publisher={Springer Science and Business Media LLC}, author={Caras, Melissa L. and Happel, Max F. K. and Chandrasekaran, Bharath and Ripollés, Pablo and Keesom, Sarah M. and Hurley, Laura M. and Remage-Healey, Luke and Holt, Lori L. and Wright, Beverly A.}, year={2022}, month=mar, pages={151–166} }
-
- @article{13Dastolfo_Hromack_2021, title={Articulatory Gain Predicts Motor Cortex and Subthalamic Nucleus Activity During Speech}, volume={32}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhab251}, DOI={10.1093/cercor/bhab251}, number={7}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Dastolfo-Hromack, C and Bush, A and Chrabaszcz, A and Alhourani, A and Lipski, W and Wang, D and Crammond, D J and Shaiman, S and Dickey, M W and Holt, L L and Turner, R S and Fiez, J A and Richardson, R M}, year={2021}, month=sep, pages={1337–1349} }
-
- @article{14Zhang_2022, title={Adjustment of cue weighting in speech by speakers and listeners: Evidence from amplitude and duration modifications of Mandarin Chinese tone}, volume={151}, ISSN={1520-8524}, url={http://dx.doi.org/10.1121/10.0009378}, DOI={10.1121/10.0009378}, number={2}, journal={The Journal of the Acoustical Society of America}, publisher={Acoustical Society of America (ASA)}, author={Zhang, Hui and Wiener, Seth and Holt, Lori L.}, year={2022}, month=feb, pages={992–1005} }
-
- @article{15DiNino_2021, title={Cutting Through the Noise: Noise-Induced Cochlear Synaptopathy and Individual Differences in Speech Understanding Among Listeners With Normal Audiograms}, volume={43}, ISSN={1538-4667}, url={http://dx.doi.org/10.1097/aud.0000000000001147}, DOI={10.1097/aud.0000000000001147}, number={1}, journal={Ear &amp; Hearing}, publisher={Ovid Technologies (Wolters Kluwer Health)}, author={DiNino, Mishaela and Holt, Lori L. and Shinn-Cunningham, Barbara G.}, year={2021}, month=nov, pages={9–22} }
-
- @article{16Zhao_2022, title={Robust and Efficient Online Auditory Psychophysics}, volume={26}, ISSN={2331-2165}, url={http://dx.doi.org/10.1177/23312165221118792}, DOI={10.1177/23312165221118792}, journal={Trends in Hearing}, publisher={SAGE Publications}, author={Zhao, Sijia and Brown, Christopher A. and Holt, Lori L. and Dick, Frederic}, year={2022}, month=jan, pages={233121652211187} }
-
- @article{17Chrabaszcz_2021, title={Simultaneously recorded subthalamic and cortical LFPs reveal different lexicality effects during reading aloud}, volume={60}, ISSN={0911-6044}, url={http://dx.doi.org/10.1016/j.jneuroling.2021.101019}, DOI={10.1016/j.jneuroling.2021.101019}, journal={Journal of Neurolinguistics}, publisher={Elsevier BV}, author={Chrabaszcz, A. and Wang, D. and Lipski, W.J. and Bush, A. and Crammond, D.J. and Shaiman, S. and Dickey, M.W. and Holt, L.L. and Turner, R.S. and Fiez, J.A. and Richardson, R.M.}, year={2021}, month=nov, pages={101019} }
-
- @article{18Zhang_2021, title={The Learning Signal in Perceptual Tuning of Speech: Bottom Up Versus Top‐Down Information}, volume={45}, ISSN={1551-6709}, url={http://dx.doi.org/10.1111/cogs.12947}, DOI={10.1111/cogs.12947}, number={3}, journal={Cognitive Science}, publisher={Wiley}, author={Zhang, Xujin and Wu, Yunan Charles and Holt, Lori L.}, year={2021}, month=mar }
-
- @article{19Gabay_2020, title={Adaptive Plasticity Under Adverse Listening Conditions is Disrupted in Developmental Dyslexia}, volume={27}, ISSN={1469-7661}, url={http://dx.doi.org/10.1017/s1355617720000661}, DOI={10.1017/s1355617720000661}, number={1}, journal={Journal of the International Neuropsychological Society}, publisher={Cambridge University Press (CUP)}, author={Gabay, Yafit and Holt, Lori L.}, year={2020}, month=aug, pages={12–22} }
-
- @article{20Laffere_2021, title={Attentional modulation of neural entrainment to sound streams in children with and without ADHD}, volume={224}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2020.117396}, DOI={10.1016/j.neuroimage.2020.117396}, journal={NeuroImage}, publisher={Elsevier BV}, author={Laffere, Aeron and Dick, Fred and Holt, Lori L and Tierney, Adam}, year={2021}, month=jan, pages={117396} }
+ @article{9Bunce_2021, title={Fantasy orientation and creativity in childhood: A closer look}, volume={57}, ISSN={0885-2014}, url={http://dx.doi.org/10.1016/j.cogdev.2020.100979}, DOI={10.1016/j.cogdev.2020.100979}, journal={Cognitive Development}, publisher={Elsevier BV}, author={Bunce, Louise and Woolley, Jacqueline D.}, year={2021}, month=jan, pages={100979} }
 
