--- a/preprints.bib
+++ b/preprints.bib
@@ -1,30 +1,48 @@
  @article{1deSteiguer_2023, title={Stability of DNA-Methylation Profiles of Biological Aging in Children and Adolescents}, url={http://dx.doi.org/10.1101/2023.10.30.564766}, DOI={10.1101/2023.10.30.564766}, publisher={Cold Spring Harbor Laboratory}, author={deSteiguer, Abby J. and Raffington, Laurel and Sabhlok, Aditi and Tanksley, Peter and Tucker-Drob, Elliot M. and Harden, K. Paige}, year={2023}, month=nov }
 
- @article{2Raffington_2023, title={Measuring the long arm of childhood in real-time: Epigenetic predictors of BMI and social determinants of health across childhood and adolescence}, url={http://dx.doi.org/10.1101/2023.01.20.524709}, DOI={10.1101/2023.01.20.524709}, publisher={Cold Spring Harbor Laboratory}, author={Raffington, Laurel and Schneper, Lisa and Mallard, Travis and Fisher, Jonah and Vinnik, Liza and Hollis-Hansen, Kelseanna and Notterman, Daniel A. and Tucker-Drob, Elliot M. and Mitchell, Colter and Harden, Kathryn P.}, year={2023}, month=jan }
+ @article{2Mallard_2023, title={The pleiotropic architecture of human impulsivity across biological scales}, url={http://dx.doi.org/10.1101/2023.11.28.23299133}, DOI={10.1101/2023.11.28.23299133}, publisher={Cold Spring Harbor Laboratory}, author={Mallard, Travis T. and Tubbs, Justin D. and Jennings, Mariela and Zhang, Yingzhe and Gustavson, Daniel E. and Grotzinger, Andrew D. and Westwater, Margaret L. and Williams, Camille M. and Fortgang, Rebecca G. and Elson, Sarah L. and Fontanillas, Pierre and Davis, Lea K. and Raznahan, Armin and Tucker-Drob, Elliot M. and Choi, Karmel W. and Ge, Tian and Smoller, Jordan W. and Palmer, Abraham A. and Sanchez-Roige, Sandra}, year={2023}, month=nov }
 
- @article{3Kun_2023, title={The genetic architecture of the human skeletal form}, url={http://dx.doi.org/10.1101/2023.01.03.521284}, DOI={10.1101/2023.01.03.521284}, publisher={Cold Spring Harbor Laboratory}, author={Kun, Eucharist and Javan, Emily M. and Smith, Olivia and Gulamali, Faris and de la Fuente, Javier and Flynn, Brianna I. and Vajrala, Kushal and Trutner, Zoe and Jayakumar, Prakash and Tucker-Drob, Elliot M. and Sohail, Mashaal and Singh, Tarjinder and Narasimhan, Vagheesh M.}, year={2023}, month=jan }
+ @article{3Zhou_2023, title={Genetic analysis of selection bias in a natural experiment: Investigating in-utero famine effects on elevated body mass index in the Dutch Hunger Winter Families Study}, url={http://dx.doi.org/10.1101/2023.10.23.23297381}, DOI={10.1101/2023.10.23.23297381}, publisher={Cold Spring Harbor Laboratory}, author={Zhou, Jiayi and Indik, Claire E. and Kuipers, Thomas B. and Li, Chihua and Nivard, Michel G. and Ryan, Calen P. and Tucker-Drob, Elliot M. and Taeubert, M. Jazmin and Wang, Shuang and Wang, Tian and Conley, Dalton and Heijmans, Bastiaan T. and Lumey, LH and Belsky, Daniel W.}, year={2023}, month=oct }
 
- @article{4Raffington_2022, title={Associations of Socioeconomic Disparities With Buccal DNA-Methylation Measures Of Biological Aging}, url={http://dx.doi.org/10.1101/2022.12.07.519438}, DOI={10.1101/2022.12.07.519438}, publisher={Cold Spring Harbor Laboratory}, author={Raffington, L. and Schwaba, T. and Aikins, M. and Richter, D. and Wagner, G.G. and Harden, K.P. and Belsky, D.W. and Tucker-Drob, E.M.}, year={2022}, month=dec }
+ @article{4Willems_2023, title={Self-control is associated with health-relevant disparities in buccal DNA-methylation measures of biological aging in older adults}, url={http://dx.doi.org/10.1101/2023.08.30.23294816}, DOI={10.1101/2023.08.30.23294816}, publisher={Cold Spring Harbor Laboratory}, author={Willems, Y.E. and deSteiguer, A. and Tanksley, P.T. and Vinnik, L. and Främke, D. and Okbay, A. and Richter, D. and Wagner, G. G. and Hertwig, R. and Koellinger, P. and Tucker-Drob, E.M. and Harden, K. P. and Raffington, L.}, year={2023}, month=sep }
 
- @article{5Yeung_2022, title={Classification accuracy of structural and functional connectomes across different depressive phenotypes}, url={http://dx.doi.org/10.1101/2022.11.22.22282621}, DOI={10.1101/2022.11.22.22282621}, publisher={Cold Spring Harbor Laboratory}, author={Yeung, Hon Wah and Stolicyn, Aleks and Shen, Xueyi and Adams, Mark J. and Romaniuk, Liana and Thng, Gladi and Buchanan, Colin R. and Tucker-Drob, Elliot M. and Bastin, Mark E. and McIntosh, Andrew M. and Cox, Simon R. and Smith, Keith M. and Whalley, Heather C.}, year={2022}, month=nov }
+ @article{5Adams_2023, title={Genetic structure of major depression symptoms across clinical and community cohorts}, url={http://dx.doi.org/10.1101/2023.07.05.23292214}, DOI={10.1101/2023.07.05.23292214}, publisher={Cold Spring Harbor Laboratory}, author={Adams, Mark J and Thorp, Jackson G and Jermy, Bradley S and Kwong, Alex S F and Kõiv, Kadri and Grotzinger, Andrew D and Nivard, Michel G and Marshall, Sally and Milaneschi, Yuri and Baune, Bernhard T and Müller-Myhsok, Bertram and Penninx, Brenda WJH and Boomsma, Dorret I and Levinson, Douglas F and Breen, Gerome and Pistis, Giorgio and Grabe, Hans J and Tiemeier, Henning and Berger, Klaus and Rietschel, Marcella and Magnusson, Patrik K and Uher, Rudolf and Hamilton, Steven P and Lucae, Susanne and Lehto, Kelli and Li, Qingqin S and Byrne, Enda M and Hickie, Ian B and Martin, Nicholas G and Medland, Sarah E and Wray, Naomi R and Tucker-Drob, Elliot M and Lewis, Cathryn M and McIntosh, Andrew M and Derks, Eske M}, year={2023}, month=jul }
 
- @article{6Yeung_2022, title={Predicting sex, age, general cognition and mental health with machine learning on brain structural connectomes}, url={http://dx.doi.org/10.1101/2022.03.03.22271801}, DOI={10.1101/2022.03.03.22271801}, publisher={Cold Spring Harbor Laboratory}, author={Yeung, Hon Wah and Stolicyn, Aleks and Buchanan, Colin R. and Tucker-Drob, Elliot M. and Bastin, Mark E. and Luz, Saturnino and McIntosh, Andrew M. and Whalley, Heather C. and Cox, Simon R. and Smith, Keith}, year={2022}, month=mar }
+ @article{6Schwaba_2023, title={Comparison of the Multivariate Genetic Architecture of Eight Major Psychiatric Disorders Across Sex}, url={http://dx.doi.org/10.1101/2023.05.25.23290545}, DOI={10.1101/2023.05.25.23290545}, publisher={Cold Spring Harbor Laboratory}, author={Schwaba, Ted and Mallard, Travis T. and Maihofer, Adam X. and Rhemtulla, Mijke and Lee, Phil H. and Smoller, Jordan W. and Davis, Lea K. and Nivard, Michel G. and Grotzinger, Andrew D. and Tucker-Drob, Elliot M.}, year={2023}, month=jun }
 
- @article{7Hatoum_2022, title={Multivariate genome-wide association meta-analysis of over 1 million subjects identifies loci underlying multiple substance use disorders}, url={http://dx.doi.org/10.1101/2022.01.06.22268753}, DOI={10.1101/2022.01.06.22268753}, publisher={Cold Spring Harbor Laboratory}, author={Hatoum, Alexander S and Colbert, Sarah M.C. and Johnson, Emma C and Huggett, Spencer B. and Deak, Joseph D. and Pathak, Gita A and Jennings, Mariela V. and Paul, Sarah E and Karcher, Nicole R. and Hansen, Isabella and Baranger, David A.A. and Edwards, Alexis and Grotzinger, Andrew David and Tucker-Drob, Elliot M and Kranzler, Henry and Davis, Lea K and Sanchez-Roige, Sandra and Polimanti, Renato and Gelernter, Joel and Edenberg, Howard J. and Bogdan, Ryan and Agrawal, Arpana}, year={2022}, month=jan }
+ @article{7Malanchini_2023, title={Genetic contributions of noncognitive skills to academic development}, url={http://dx.doi.org/10.21203/rs.3.rs-2775994/v1}, DOI={10.21203/rs.3.rs-2775994/v1}, publisher={Research Square Platform LLC}, author={Malanchini, Margherita and Allegrini, Andrea and Nivard, Michel G and Biroli, Pietro and Rimfeld, Kaili and Cheesman, Rosa and von Stumm, Sophie and Demange, Perline and Bergen, Elsje van and Grotzinger, Andrew and Raffington, Laurel and Fuente, Javier de la and Pingault, Jean-Baptiste and Harden, K and Tucker-Drob, Elliot and Plomin, Robert}, year={2023}, month=apr }
 
- @article{8Raffington_2021, title={Socially stratified DNA-methylation profiles are associated with disparities in child and adolescent mental health}, url={http://dx.doi.org/10.1101/2021.09.17.21263582}, DOI={10.1101/2021.09.17.21263582}, publisher={Cold Spring Harbor Laboratory}, author={Raffington, L. and Tanksley, P. and Vinnik, L. and Sabhlok, A. and Patterson, M.W. and Mallard, T. and Malanchini, M. and Ayorech, Z. and Tucker-Drob, E.M. and Harden, K.P.}, year={2021}, month=sep }
+ @article{8Malanchini_2023, title={Genetic contributions of noncognitive skills to academic development}, url={http://dx.doi.org/10.1101/2023.04.03.535380}, DOI={10.1101/2023.04.03.535380}, publisher={Cold Spring Harbor Laboratory}, author={Malanchini, Margherita and Allegrini, Andrea G. and Nivard, Michel G. and Biroli, Pietro and Rimfeld, Kaili and Cheesman, Rosa and Stumm, Sophie von and Demange, Perline A. and Bergen, Elsje van and Grotzinger, Andrew D. and Raffington, Laurel and Fuente, Javier De la and Pingault, Jean-Baptiste and Harden, K. Paige and Tucker-Drob, Elliot M. and Plomin, Robert}, year={2023}, month=apr }
 
- @article{9Raffington_2021, title={Socially stratified epigenetic profiles are associated with cognitive functioning in children and adolescents}, url={http://dx.doi.org/10.1101/2021.08.19.456979}, DOI={10.1101/2021.08.19.456979}, publisher={Cold Spring Harbor Laboratory}, author={Raffington, L. and Tanksley, P.T. and Sabhlok, A. and Vinnik, L. and Mallard, T. and King, L.S. and Goosby, B. and Harden, K.P. and Tucker-Drob, E.M.}, year={2021}, month=aug }
+ @article{9Moodie_2023, title={General and specific patterns of cortical gene expression as spatial correlates of complex cognitive functioning}, url={http://dx.doi.org/10.1101/2023.03.16.532915}, DOI={10.1101/2023.03.16.532915}, publisher={Cold Spring Harbor Laboratory}, author={Moodie, Joanna E. and Harris, Sarah E. and Harris, Mathew A. and Buchanan, Colin R. and Davies, Gail and Taylor, Adele and Redmond, Paul and Liewald, David and del C Valdés Hernández, Maria and Shenkin, Susan and Russ, Tom C. and Maniega, Susana Muñoz and Luciano, Michelle and Corley, Janie and Stolicyn, Aleks and Shen, Xueyi and Steele, Douglas and Waiter, Gordon and Sandu-Giuraniuc, Anca and Bastin, Mark E. and Wardlaw, Joanna M. and McIntosh, Andrew and Whalley, Heather and Tucker-Drob, Elliot M. and Deary, Ian J. and Cox, Simon R.}, year={2023}, month=mar }
 
- @article{10de_la_Fuente_2021, title={Multivariate Modeling of Direct and Proxy GWAS Indicates Substantial Common Variant Heritability of Alzheimer’s Disease}, url={http://dx.doi.org/10.1101/2021.05.06.21256747}, DOI={10.1101/2021.05.06.21256747}, publisher={Cold Spring Harbor Laboratory}, author={de la Fuente, Javier and Grotzinger, Andrew D. and Marioni, Riccardo E. and Nivard, Michel G. and Tucker-Drob, Elliot M.}, year={2021}, month=may }
+ @article{10Raffington_2023, title={Measuring the long arm of childhood in real-time: Epigenetic predictors of BMI and social determinants of health across childhood and adolescence}, url={http://dx.doi.org/10.1101/2023.01.20.524709}, DOI={10.1101/2023.01.20.524709}, publisher={Cold Spring Harbor Laboratory}, author={Raffington, Laurel and Schneper, Lisa and Mallard, Travis and Fisher, Jonah and Vinnik, Liza and Hollis-Hansen, Kelseanna and Notterman, Daniel A. and Tucker-Drob, Elliot M. and Mitchell, Colter and Harden, Kathryn P.}, year={2023}, month=jan }
 
- @article{11Grotzinger_2021, title={Transcriptome-wide and Stratified Genomic Structural Equation Modeling Identify Neurobiological Pathways Underlying General and Specific Cognitive Functions}, url={http://dx.doi.org/10.1101/2021.04.30.21256409}, DOI={10.1101/2021.04.30.21256409}, publisher={Cold Spring Harbor Laboratory}, author={Grotzinger, Andrew D. and de la Fuente, Javier and Davies, Gail and Nivard, Michel G. and Tucker-Drob, Elliot M.}, year={2021}, month=may }
+ @article{11Kun_2023, title={The genetic architecture of the human skeletal form}, url={http://dx.doi.org/10.1101/2023.01.03.521284}, DOI={10.1101/2023.01.03.521284}, publisher={Cold Spring Harbor Laboratory}, author={Kun, Eucharist and Javan, Emily M. and Smith, Olivia and Gulamali, Faris and de la Fuente, Javier and Flynn, Brianna I. and Vajrala, Kushal and Trutner, Zoe and Jayakumar, Prakash and Tucker-Drob, Elliot M. and Sohail, Mashaal and Singh, Tarjinder and Narasimhan, Vagheesh M.}, year={2023}, month=jan }
 
- @article{12Buchanan_2021, title={Comparison of structural MRI brain measures between 1.5T and 3T: data from the Lothian Birth Cohort 1936}, url={http://dx.doi.org/10.1101/2021.04.23.21256000}, DOI={10.1101/2021.04.23.21256000}, publisher={Cold Spring Harbor Laboratory}, author={Buchanan, Colin R. and Muñoz Maniega, Susana and Valdés Hernández, Maria C. and Ballerini, Lucia and Barclay, Gayle and Taylor, Adele M. and Russ, Tom C. and Tucker-Drob, Elliot M. and Wardlaw, Joanna M. and Deary, Ian J. and Bastin, Mark E. and Cox, Simon R.}, year={2021}, month=apr }
+ @article{12Raffington_2022, title={Associations of Socioeconomic Disparities With Buccal DNA-Methylation Measures Of Biological Aging}, url={http://dx.doi.org/10.1101/2022.12.07.519438}, DOI={10.1101/2022.12.07.519438}, publisher={Cold Spring Harbor Laboratory}, author={Raffington, L. and Schwaba, T. and Aikins, M. and Richter, D. and Wagner, G.G. and Harden, K.P. and Belsky, D.W. and Tucker-Drob, E.M.}, year={2022}, month=dec }
 
- @article{13Domingue_2021, title={Ubiquitous bias &amp;amp; false discovery due to model misspecification in analysis of statistical interactions: The role of the outcome’s distribution and metric properties}, url={http://dx.doi.org/10.31234/osf.io/932fm}, DOI={10.31234/osf.io/932fm}, publisher={Center for Open Science}, author={Domingue, Benjamin and Kanopka, Klint and Trejo, Sam and Rhemtulla, Mijke and Tucker-Drob, Elliot M.}, year={2021}, month=apr }
+ @article{13Yeung_2022, title={Classification accuracy of structural and functional connectomes across different depressive phenotypes}, url={http://dx.doi.org/10.1101/2022.11.22.22282621}, DOI={10.1101/2022.11.22.22282621}, publisher={Cold Spring Harbor Laboratory}, author={Yeung, Hon Wah and Stolicyn, Aleks and Shen, Xueyi and Adams, Mark J. and Romaniuk, Liana and Thng, Gladi and Buchanan, Colin R. and Tucker-Drob, Elliot M. and Bastin, Mark E. and McIntosh, Andrew M. and Cox, Simon R. and Smith, Keith M. and Whalley, Heather C.}, year={2022}, month=nov }
 
- @article{14Howe_2021, title={Within-sibship GWAS improve estimates of direct genetic effects}, url={http://dx.doi.org/10.1101/2021.03.05.433935}, DOI={10.1101/2021.03.05.433935}, publisher={Cold Spring Harbor Laboratory}, author={Howe, Laurence J and Nivard, Michel G and Morris, Tim T and Hansen, Ailin F and Rasheed, Humaira and Cho, Yoonsu and Chittoor, Geetha and Lind, Penelope A and Palviainen, Teemu and van der Zee, Matthijs D and Cheesman, Rosa and Mangino, Massimo and Wang, Yunzhang and Li, Shuai and Klaric, Lucija and Ratliff, Scott M and Bielak, Lawrence F and Nygaard, Marianne and Reynolds, Chandra A and Balbona, Jared V and Bauer, Christopher R and Boomsma, Dorret I and Baras, Aris and Campbell, Archie and Campbell, Harry and Chen, Zhengming and Christofidou, Paraskevi and Dahm, Christina C and Dokuru, Deepika R and Evans, Luke M and de Geus, Eco JC and Giddaluru, Sudheer and Gordon, Scott D and Harden, K. Paige and Havdahl, Alexandra and Hill, W. David and Kerr, Shona M and Kim, Yongkang and Kweon, Hyeokmoon and Latvala, Antti and Li, Liming and Lin, Kuang and Martikainen, Pekka and Magnusson, Patrik KE and Mills, Melinda C and Lawlor, Deborah A and Overton, John D and Pedersen, Nancy L and Porteous, David J and Reid, Jeffrey and Silventoinen, Karri and Southey, Melissa C and Mallard, Travis T and Tucker-Drob, Elliot M and Wright, Margaret J and Hewitt, John K and Keller, Matthew C and Stallings, Michael C and Christensen, Kaare and Kardia, Sharon LR and Peyser, Patricia A and Smith, Jennifer A and Wilson, James F and Hopper, John L and Hägg, Sara and Spector, Tim D and Pingault, Jean-Baptiste and Plomin, Robert and Bartels, Meike and Martin, Nicholas G and Justice, Anne E and Millwood, Iona Y and Hveem, Kristian and Naess, Øyvind and Willer, Cristen J and Åsvold, Bjørn Olav and Koellinger, Philipp D and Kaprio, Jaakko and Medland, Sarah E and Walters, Robin G and Benjamin, Daniel J and Turley, Patrick and Evans, David M and Smith, George Davey and Hayward, Caroline and Brumpton, Ben and Hemani, Gibran and Davies, Neil M}, year={2021}, month=mar }
+ @article{14Yeung_2022, title={Predicting sex, age, general cognition and mental health with machine learning on brain structural connectomes}, url={http://dx.doi.org/10.1101/2022.03.03.22271801}, DOI={10.1101/2022.03.03.22271801}, publisher={Cold Spring Harbor Laboratory}, author={Yeung, Hon Wah and Stolicyn, Aleks and Buchanan, Colin R. and Tucker-Drob, Elliot M. and Bastin, Mark E. and Luz, Saturnino and McIntosh, Andrew M. and Whalley, Heather C. and Cox, Simon R. and Smith, Keith}, year={2022}, month=mar }
 
- @article{15Grotzinger_2021, title={Pervasive Downward Bias in Estimates of Liability Scale Heritability in GWAS Meta-Analysis: A Simple Solution}, url={http://dx.doi.org/10.1101/2021.09.22.21263909}, DOI={10.1101/2021.09.22.21263909}, publisher={Cold Spring Harbor Laboratory}, author={Grotzinger, Andrew D. and de la Fuente, Javier and Nivard, Michel G. and Tucker-Drob, Elliot M.}, year={2021}, month=sep }
+ @article{15Hatoum_2022, title={Multivariate genome-wide association meta-analysis of over 1 million subjects identifies loci underlying multiple substance use disorders}, url={http://dx.doi.org/10.1101/2022.01.06.22268753}, DOI={10.1101/2022.01.06.22268753}, publisher={Cold Spring Harbor Laboratory}, author={Hatoum, Alexander S and Colbert, Sarah M.C. and Johnson, Emma C and Huggett, Spencer B. and Deak, Joseph D. and Pathak, Gita A and Jennings, Mariela V. and Paul, Sarah E and Karcher, Nicole R. and Hansen, Isabella and Baranger, David A.A. and Edwards, Alexis and Grotzinger, Andrew David and Tucker-Drob, Elliot M and Kranzler, Henry and Davis, Lea K and Sanchez-Roige, Sandra and Polimanti, Renato and Gelernter, Joel and Edenberg, Howard J. and Bogdan, Ryan and Agrawal, Arpana}, year={2022}, month=jan }
+
+ @article{16Raffington_2021, title={Socially stratified DNA-methylation profiles are associated with disparities in child and adolescent mental health}, url={http://dx.doi.org/10.1101/2021.09.17.21263582}, DOI={10.1101/2021.09.17.21263582}, publisher={Cold Spring Harbor Laboratory}, author={Raffington, L. and Tanksley, P. and Vinnik, L. and Sabhlok, A. and Patterson, M.W. and Mallard, T. and Malanchini, M. and Ayorech, Z. and Tucker-Drob, E.M. and Harden, K.P.}, year={2021}, month=sep }
+
+ @article{17Raffington_2021, title={Socially stratified epigenetic profiles are associated with cognitive functioning in children and adolescents}, url={http://dx.doi.org/10.1101/2021.08.19.456979}, DOI={10.1101/2021.08.19.456979}, publisher={Cold Spring Harbor Laboratory}, author={Raffington, L. and Tanksley, P.T. and Sabhlok, A. and Vinnik, L. and Mallard, T. and King, L.S. and Goosby, B. and Harden, K.P. and Tucker-Drob, E.M.}, year={2021}, month=aug }
+
+ @article{18de_la_Fuente_2021, title={Multivariate Modeling of Direct and Proxy GWAS Indicates Substantial Common Variant Heritability of Alzheimer’s Disease}, url={http://dx.doi.org/10.1101/2021.05.06.21256747}, DOI={10.1101/2021.05.06.21256747}, publisher={Cold Spring Harbor Laboratory}, author={de la Fuente, Javier and Grotzinger, Andrew D. and Marioni, Riccardo E. and Nivard, Michel G. and Tucker-Drob, Elliot M.}, year={2021}, month=may }
+
+ @article{19Grotzinger_2021, title={Transcriptome-wide and Stratified Genomic Structural Equation Modeling Identify Neurobiological Pathways Underlying General and Specific Cognitive Functions}, url={http://dx.doi.org/10.1101/2021.04.30.21256409}, DOI={10.1101/2021.04.30.21256409}, publisher={Cold Spring Harbor Laboratory}, author={Grotzinger, Andrew D. and de la Fuente, Javier and Davies, Gail and Nivard, Michel G. and Tucker-Drob, Elliot M.}, year={2021}, month=may }
+
+ @article{20Becker_2021, title={Resource Profile and User Guide of the Polygenic Index Repository}, url={http://dx.doi.org/10.1101/2021.05.08.443158}, DOI={10.1101/2021.05.08.443158}, publisher={Cold Spring Harbor Laboratory}, author={Becker, Joel and Burik, Casper A.P. and Goldman, Grant and Wang, Nancy and Jayashankar, Hariharan and Bennett, Michael and Belsky, Daniel W. and Linnér, Richard Karlsson and Ahlskog, Rafael and Kleinman, Aaron and Hinds, David A. and Caspi, Avshalom and Corcoran, David L. and Moffitt, Terrie E. and Poulton, Richie and Sugden, Karen and Williams, Benjamin S. and Harris, Kathleen Mullan and Steptoe, Andrew and Ajnakina, Olesya and Milani, Lili and Esko, Tõnu and Iacono, William G. and McGue, Matt and Magnusson, Patrik K.E. and Mallard, Travis T. and Harden, K. Paige and Tucker-Drob, Elliot M. and Herd, Pamela and Freese, Jeremy and Young, Alexander and Beauchamp, Jonathan P. and Koellinger, Philipp and Oskarsson, Sven and Johannesson, Magnus and Visscher, Peter M. and Meyer, Michelle N. and Laibson, David and Cesarini, David and Benjamin, Daniel J. and Turley, Patrick and Okbay, Aysu}, year={2021}, month=may }
+
+ @article{21Buchanan_2021, title={Comparison of structural MRI brain measures between 1.5T and 3T: data from the Lothian Birth Cohort 1936}, url={http://dx.doi.org/10.1101/2021.04.23.21256000}, DOI={10.1101/2021.04.23.21256000}, publisher={Cold Spring Harbor Laboratory}, author={Buchanan, Colin R. and Muñoz Maniega, Susana and Valdés Hernández, Maria C. and Ballerini, Lucia and Barclay, Gayle and Taylor, Adele M. and Russ, Tom C. and Tucker-Drob, Elliot M. and Wardlaw, Joanna M. and Deary, Ian J. and Bastin, Mark E. and Cox, Simon R.}, year={2021}, month=apr }
+
+ @article{22Domingue_2021, title={Ubiquitous bias &amp;amp; false discovery due to model misspecification in analysis of statistical interactions: The role of the outcome’s distribution and metric properties}, url={http://dx.doi.org/10.31234/osf.io/932fm}, DOI={10.31234/osf.io/932fm}, publisher={Center for Open Science}, author={Domingue, Benjamin and Kanopka, Klint and Trejo, Sam and Rhemtulla, Mijke and Tucker-Drob, Elliot M.}, year={2021}, month=apr }
+
+ @article{23Howe_2021, title={Within-sibship GWAS improve estimates of direct genetic effects}, url={http://dx.doi.org/10.1101/2021.03.05.433935}, DOI={10.1101/2021.03.05.433935}, publisher={Cold Spring Harbor Laboratory}, author={Howe, Laurence J and Nivard, Michel G and Morris, Tim T and Hansen, Ailin F and Rasheed, Humaira and Cho, Yoonsu and Chittoor, Geetha and Lind, Penelope A and Palviainen, Teemu and van der Zee, Matthijs D and Cheesman, Rosa and Mangino, Massimo and Wang, Yunzhang and Li, Shuai and Klaric, Lucija and Ratliff, Scott M and Bielak, Lawrence F and Nygaard, Marianne and Reynolds, Chandra A and Balbona, Jared V and Bauer, Christopher R and Boomsma, Dorret I and Baras, Aris and Campbell, Archie and Campbell, Harry and Chen, Zhengming and Christofidou, Paraskevi and Dahm, Christina C and Dokuru, Deepika R and Evans, Luke M and de Geus, Eco JC and Giddaluru, Sudheer and Gordon, Scott D and Harden, K. Paige and Havdahl, Alexandra and Hill, W. David and Kerr, Shona M and Kim, Yongkang and Kweon, Hyeokmoon and Latvala, Antti and Li, Liming and Lin, Kuang and Martikainen, Pekka and Magnusson, Patrik KE and Mills, Melinda C and Lawlor, Deborah A and Overton, John D and Pedersen, Nancy L and Porteous, David J and Reid, Jeffrey and Silventoinen, Karri and Southey, Melissa C and Mallard, Travis T and Tucker-Drob, Elliot M and Wright, Margaret J and Hewitt, John K and Keller, Matthew C and Stallings, Michael C and Christensen, Kaare and Kardia, Sharon LR and Peyser, Patricia A and Smith, Jennifer A and Wilson, James F and Hopper, John L and Hägg, Sara and Spector, Tim D and Pingault, Jean-Baptiste and Plomin, Robert and Bartels, Meike and Martin, Nicholas G and Justice, Anne E and Millwood, Iona Y and Hveem, Kristian and Naess, Øyvind and Willer, Cristen J and Åsvold, Bjørn Olav and Koellinger, Philipp D and Kaprio, Jaakko and Medland, Sarah E and Walters, Robin G and Benjamin, Daniel J and Turley, Patrick and Evans, David M and Smith, George Davey and Hayward, Caroline and Brumpton, Ben and Hemani, Gibran and Davies, Neil M}, year={2021}, month=mar }
+
+ @article{24Grotzinger_2021, title={Pervasive Downward Bias in Estimates of Liability Scale Heritability in GWAS Meta-Analysis: A Simple Solution}, url={http://dx.doi.org/10.1101/2021.09.22.21263909}, DOI={10.1101/2021.09.22.21263909}, publisher={Cold Spring Harbor Laboratory}, author={Grotzinger, Andrew D. and de la Fuente, Javier and Nivard, Michel G. and Tucker-Drob, Elliot M.}, year={2021}, month=sep }
 
