--- a/pubs.bib
+++ b/pubs.bib
@@ -1,18 +1,28 @@
- @article{1Woolley_2023, title={Development of a Naïve Theory of Superstition}, volume={25}, ISSN={1532-7647}, url={http://dx.doi.org/10.1080/15248372.2023.2256871}, DOI={10.1080/15248372.2023.2256871}, number={1}, journal={Journal of Cognition and Development}, publisher={Informa UK Limited}, author={Woolley, Jacqueline D. and Baca, Paola A. and Kelley, Kelsey A.}, year={2023}, month=oct, pages={27–45} }
+ @article{1Nugiel_2023, title={Brain connectivity and academic skills in English learners}, volume={34}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhad414}, DOI={10.1093/cercor/bhad414}, number={1}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Nugiel, Tehila and Demeter, Damion V and Mitchell, Mackenzie E and Garza, AnnaCarolina and Hernandez, Arturo E and Juranek, Jenifer and Church, Jessica A}, year={2023}, month=dec }
 
- @article{2Li_2023, title={Exploring factors influencing young children’s learning from storybooks: Interactive and multimedia features}, volume={233}, ISSN={0022-0965}, url={http://dx.doi.org/10.1016/j.jecp.2023.105680}, DOI={10.1016/j.jecp.2023.105680}, journal={Journal of Experimental Child Psychology}, publisher={Elsevier BV}, author={Li, Hui and Zhang, Ting and Woolley, Jacqueline D. and An, Jing and Wang, Fuxing}, year={2023}, month=sep, pages={105680} }
+ @article{2Burenkova_2024, title={Associations between telomere length, glucocorticoid receptor gene DNA methylation, volume of stress-related brain structures, and academic performance in middle-school-age children}, volume={17}, ISSN={2666-4976}, url={http://dx.doi.org/10.1016/j.cpnec.2023.100223}, DOI={10.1016/j.cpnec.2023.100223}, journal={Comprehensive Psychoneuroendocrinology}, publisher={Elsevier BV}, author={Burenkova, Olga V. and Naumova, Oksana Yu. and Church, Jessica A. and Juranek, Jenifer and Fletcher, Jack M. and Grigorenko, Elena L.}, year={2024}, month=feb, pages={100223} }
 
- @article{3Nissel_2023, title={Three Men Make a Tiger: The Effect of Consensus Testimony on Chinese and U.S. Children’s Judgments about Possibility}, volume={23}, ISSN={1568-5373}, url={http://dx.doi.org/10.1163/15685373-12340154}, DOI={10.1163/15685373-12340154}, number={1–2}, journal={Journal of Cognition and Culture}, publisher={Brill}, author={Nissel, Jenny and Li, Hui and Cramer, Amanda and Woolley, Jacqueline D.}, year={2023}, month=apr, pages={98–126} }
+ @article{3Porter_2023, title={A longitudinal examination of executive function abilities, attention‐deficit/hyperactivity disorder, and puberty in adolescence}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.14057}, DOI={10.1111/cdev.14057}, journal={Child Development}, publisher={Wiley}, author={Porter, Blaire M. and Roe, Mary Abbe and Mitchell, Mackenzie E. and Church, Jessica A.}, year={2023}, month=dec }
 
- @article{4Nissel_2022, title={Brave new world: Imaginative fictions offer simulated safety and actual benefits}, volume={45}, ISSN={1469-1825}, url={http://dx.doi.org/10.1017/s0140525x21002284}, DOI={10.1017/s0140525x21002284}, journal={Behavioral and Brain Sciences}, publisher={Cambridge University Press (CUP)}, author={Nissel, Jenny E. and Woolley, Jacqueline D.}, year={2022} }
+ @article{4Ben_Asher_2023, title={Bidirectional longitudinal relations between executive function and social function across adolescence.}, volume={59}, ISSN={0012-1649}, url={http://dx.doi.org/10.1037/dev0001580}, DOI={10.1037/dev0001580}, number={9}, journal={Developmental Psychology}, publisher={American Psychological Association (APA)}, author={Ben-Asher, Eliya and Porter, Blaire M. and Roe, Mary Abbe and Mitchell, Mackenzie E. and Church, Jessica A.}, year={2023}, month=sep, pages={1587–1594} }
 
- @article{5Dore_2022, title={Never trust a stranger: Effects of explicit belief statements from strangers on children’s reality status beliefs and beliefs about consensus}, volume={41}, ISSN={2044-835X}, url={http://dx.doi.org/10.1111/bjdp.12437}, DOI={10.1111/bjdp.12437}, number={2}, journal={British Journal of Developmental Psychology}, publisher={Wiley}, author={Dore, Rebecca A. and Woolley, Jacqueline and Nissel, Jenny and Hixon, John G.}, year={2022}, month=nov, pages={117–127} }
+ @article{5Demeter_2023, title={Resting-state cortical hubs in youth organize into four categories}, volume={42}, ISSN={2211-1247}, url={http://dx.doi.org/10.1016/j.celrep.2023.112521}, DOI={10.1016/j.celrep.2023.112521}, number={5}, journal={Cell Reports}, publisher={Elsevier BV}, author={Demeter, Damion V. and Gordon, Evan M. and Nugiel, Tehila and Garza, AnnaCarolina and Larguinho, Tyler L. and Church, Jessica A.}, year={2023}, month=may, pages={112521} }
 
- @article{6Li_2022, title={The impact of informant type on children’s animal knowledge learning}, volume={62}, ISSN={0885-2014}, url={http://dx.doi.org/10.1016/j.cogdev.2022.101162}, DOI={10.1016/j.cogdev.2022.101162}, journal={Cognitive Development}, publisher={Elsevier BV}, author={Li, Hui and Yu, Haoxue and Woolley, Jacqueline D. and Wu, Lihanjing}, year={2022}, month=apr, pages={101162} }
+ @article{6Aizza_2023, title={Youth pre-pandemic executive function relates to year one COVID-19 difficulties}, volume={14}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/fpsyg.2023.1033282}, DOI={10.3389/fpsyg.2023.1033282}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Aizza, Alice and Porter, Blaire M. and Church, Jessica A.}, year={2023}, month=apr }
 
- @article{7Woolley_2021, title={Children’s Use of Testimony to Determine Reality Status}, volume={92}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.13500}, DOI={10.1111/cdev.13500}, number={3}, journal={Child Development}, publisher={Wiley}, author={Woolley, Jacqueline D. and Nissel, Jenny and Gilpin, Ansley T.}, year={2021}, month=jan }
+ @article{7Davis_2022, title={Key considerations for child and adolescent MRI data collection}, volume={1}, ISSN={2813-1193}, url={http://dx.doi.org/10.3389/fnimg.2022.981947}, DOI={10.3389/fnimg.2022.981947}, journal={Frontiers in Neuroimaging}, publisher={Frontiers Media SA}, author={Davis, Brittany R. and Garza, AnnaCarolina and Church, Jessica A.}, year={2022}, month=sep }
 
- @article{8Ghossainy_2021, title={Epistemic Vigilance in Early Ontogeny: Children’s Use of Nonverbal Behavior to Detect Deception}, volume={19}, ISSN={1474-7049}, url={http://dx.doi.org/10.1177/1474704920986860}, DOI={10.1177/1474704920986860}, number={1}, journal={Evolutionary Psychology}, publisher={SAGE Publications}, author={Ghossainy, Maliki E. and Al-Shawaf, Laith and Woolley, Jacqueline D.}, year={2021}, month=jan, pages={147470492098686} }
+ @article{8Garcini_2022, title={Increasing diversity in developmental cognitive neuroscience: A roadmap for increasing representation in pediatric neuroimaging research}, volume={58}, ISSN={1878-9293}, url={http://dx.doi.org/10.1016/j.dcn.2022.101167}, DOI={10.1016/j.dcn.2022.101167}, journal={Developmental Cognitive Neuroscience}, publisher={Elsevier BV}, author={Garcini, Luz M. and Arredondo, Maria M. and Berry, Obianuju and Church, Jessica A. and Fryberg, Stephanie and Thomason, Moriah E. and McLaughlin, Katie A.}, year={2022}, month=dec, pages={101167} }
 
- @article{9Bunce_2021, title={Fantasy orientation and creativity in childhood: A closer look}, volume={57}, ISSN={0885-2014}, url={http://dx.doi.org/10.1016/j.cogdev.2020.100979}, DOI={10.1016/j.cogdev.2020.100979}, journal={Cognitive Development}, publisher={Elsevier BV}, author={Bunce, Louise and Woolley, Jacqueline D.}, year={2021}, month=jan, pages={100979} }
+ @article{9Barendse_2022, title={Longitudinal Change in Adolescent Depression and Anxiety Symptoms from before to during the <scp>COVID</scp>‐19 Pandemic}, volume={33}, ISSN={1532-7795}, url={http://dx.doi.org/10.1111/jora.12781}, DOI={10.1111/jora.12781}, number={1}, journal={Journal of Research on Adolescence}, publisher={Wiley}, author={Barendse, Marjolein E.A. and Flannery, Jessica and Cavanagh, Caitlin and Aristizabal, Melissa and Becker, Stephen P. and Berger, Estelle and Breaux, Rosanna and Campione‐Barr, Nicole and Church, Jessica A. and Crone, Eveline A. and Dahl, Ronald E. and Dennis‐Tiwary, Tracy A. and Dvorsky, Melissa R. and Dziura, Sarah L. and van de Groep, Suzanne and Ho, Tiffany C. and Killoren, Sarah E. and Langberg, Joshua M. and Larguinho, Tyler L. and Magis‐Weinberg, Lucía and Michalska, Kalina J. and Mullins, Jordan L. and Nadel, Hanna and Porter, Blaire M. and Prinstein, Mitchell J. and Redcay, Elizabeth and Rose, Amanda J. and Rote, Wendy M. and Roy, Amy K. and Sweijen, Sophie W. and Telzer, Eva H. and Teresi, Giana I. and Thomas, April Gile and Pfeifer, Jennifer H.}, year={2022}, month=jul, pages={74–91} }
+
+ @article{10Porter_2021, title={Examination of Pre-pandemic Measures on Youth Well-being During Early Stages of the COVID-19 Pandemic}, volume={1}, ISSN={2667-1743}, url={http://dx.doi.org/10.1016/j.bpsgos.2021.08.003}, DOI={10.1016/j.bpsgos.2021.08.003}, number={4}, journal={Biological Psychiatry Global Open Science}, publisher={Elsevier BV}, author={Porter, Blaire M. and Douglas, Ian J. and Larguinho, Tyler L. and Aristizabal, Melissa and Mitchell, Mackenzie E. and Roe, Mary Abbe and Church, Jessica A.}, year={2021}, month=dec, pages={252–260} }
+
+ @article{11Garza_2021, title={A Core Set of Brain Regions Helps Kids Achieve Their Goals}, volume={9}, ISSN={2296-6846}, url={http://dx.doi.org/10.3389/frym.2021.618432}, DOI={10.3389/frym.2021.618432}, journal={Frontiers for Young Minds}, publisher={Frontiers Media SA}, author={Garza, AnnaCarolina and Aizza, Alice and Charoenworawat, Janchira K. and Church, Jessica A.}, year={2021}, month=aug }
+
+ @article{12Church_2021, title={The Role of Neural and Genetic Processes in Learning to Read and Specific Reading Disabilities: Implications for Instruction}, volume={58}, ISSN={1936-2722}, url={http://dx.doi.org/10.1002/rrq.439}, DOI={10.1002/rrq.439}, number={2}, journal={Reading Research Quarterly}, publisher={Wiley}, author={Church, Jessica A. and Grigorenko, Elena L. and Fletcher, Jack M.}, year={2021}, month=aug, pages={203–219} }
+
+ @article{13Zheng_2021, title={A Developmental Eye Tracking Investigation of Cued Task Switching Performance}, volume={92}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.13478}, DOI={10.1111/cdev.13478}, number={4}, journal={Child Development}, publisher={Wiley}, author={Zheng, Annie and Church, Jessica A.}, year={2021}, month=jan, pages={1652–1672} }
+
+ @article{14Roe_2021, title={Error-signaling in the developing brain}, volume={227}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2020.117621}, DOI={10.1016/j.neuroimage.2020.117621}, journal={NeuroImage}, publisher={Elsevier BV}, author={Roe, Mary Abbe and Engelhardt, Laura E. and Nugiel, Tehila and Harden, K. Paige and Tucker-Drob, Elliot M. and Church, Jessica A.}, year={2021}, month=feb, pages={117621} }
 
