--- a/pubs.bib
+++ b/pubs.bib
@@ -1,28 +1,24 @@
- @article{1Nugiel_2023, title={Brain connectivity and academic skills in English learners}, volume={34}, ISSN={1460-2199}, url={http://dx.doi.org/10.1093/cercor/bhad414}, DOI={10.1093/cercor/bhad414}, number={1}, journal={Cerebral Cortex}, publisher={Oxford University Press (OUP)}, author={Nugiel, Tehila and Demeter, Damion V and Mitchell, Mackenzie E and Garza, AnnaCarolina and Hernandez, Arturo E and Juranek, Jenifer and Church, Jessica A}, year={2023}, month=dec }
+ @article{1Tanjitpiyanond_2022, title={A 32‐society investigation of the influence of perceived economic inequality on social class stereotyping}, volume={53}, ISSN={1099-0992}, url={http://dx.doi.org/10.1002/ejsp.2908}, DOI={10.1002/ejsp.2908}, number={2}, journal={European Journal of Social Psychology}, publisher={Wiley}, author={Tanjitpiyanond, Porntida and Jetten, Jolanda and Peters, Kim and Ashokkumar, Ashwini and Barry, Oumar and Billet, Matthew and Becker, Maja and Booth, Robert W. and Castro, Diego and Chinchilla, Juana and Costantini, Giulio and Dejonckheere, Egon and Dimdins, Girts and Erbas, Yasemin and Espinosa, Agustín and Finchilescu, Gillian and Gómez, Ángel and González, Roberto and Goto, Nobuhiko and Hatano, Aya and Hartwich, Lea and Jarukasemthawee, Somboon and Karunagharan, Jaya Kumar and Novak, Lindsay M. and Kim, Jinseok P. and Kohút, Michal and Liu, Yi and Loughnan, Steve and Onyishi, Ike E. and Onyishi, Charity N. and Varela, Micaela and Pattara‐angkoon, Iris S. and Peker, Müjde and Pisitsungkagarn, Kullaya and Rizwan, Muhammad and Suh, Eunkook M. and Swann, William and Tong, Eddie M. W. and Turner, Rhiannon N. and Vanhasbroeck, Niels and Van Lange, Paul A. M. and Vauclair, Christin‐Melanie and Vinogradov, Alexander and Wacera, Grace and Wang, Zhechen and Wibisono, Susilo and Yeung, Victoria Wai‐Lan}, year={2022}, month=nov, pages={367–382} }
 
- @article{2Burenkova_2024, title={Associations between telomere length, glucocorticoid receptor gene DNA methylation, volume of stress-related brain structures, and academic performance in middle-school-age children}, volume={17}, ISSN={2666-4976}, url={http://dx.doi.org/10.1016/j.cpnec.2023.100223}, DOI={10.1016/j.cpnec.2023.100223}, journal={Comprehensive Psychoneuroendocrinology}, publisher={Elsevier BV}, author={Burenkova, Olga V. and Naumova, Oksana Yu. and Church, Jessica A. and Juranek, Jenifer and Fletcher, Jack M. and Grigorenko, Elena L.}, year={2024}, month=feb, pages={100223} }
+ @article{2Bosson_2023, title={A truly responsive listener is a self-verifying listener}, volume={53}, ISSN={2352-250X}, url={http://dx.doi.org/10.1016/j.copsyc.2023.101670}, DOI={10.1016/j.copsyc.2023.101670}, journal={Current Opinion in Psychology}, publisher={Elsevier BV}, author={Bosson, Jennifer K. and Swann, William B.}, year={2023}, month=oct, pages={101670} }
 
- @article{3Porter_2023, title={A longitudinal examination of executive function abilities, attention‐deficit/hyperactivity disorder, and puberty in adolescence}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.14057}, DOI={10.1111/cdev.14057}, journal={Child Development}, publisher={Wiley}, author={Porter, Blaire M. and Roe, Mary Abbe and Mitchell, Mackenzie E. and Church, Jessica A.}, year={2023}, month=dec }
+ @article{3Rousis_2023, title={Behind the Blackpill: Self-Verification and Identity Fusion Predict Endorsement of Violence Against Women Among Self-Identified Incels}, ISSN={1552-7433}, url={http://dx.doi.org/10.1177/01461672231166481}, DOI={10.1177/01461672231166481}, journal={Personality and Social Psychology Bulletin}, publisher={SAGE Publications}, author={Rousis, Gregory J. and Martel, Francois Alexi and Bosson, Jennifer K. and Swann, William B.}, year={2023}, month=apr, pages={014616722311664} }
 
- @article{4Ben_Asher_2023, title={Bidirectional longitudinal relations between executive function and social function across adolescence.}, volume={59}, ISSN={0012-1649}, url={http://dx.doi.org/10.1037/dev0001580}, DOI={10.1037/dev0001580}, number={9}, journal={Developmental Psychology}, publisher={American Psychological Association (APA)}, author={Ben-Asher, Eliya and Porter, Blaire M. and Roe, Mary Abbe and Mitchell, Mackenzie E. and Church, Jessica A.}, year={2023}, month=sep, pages={1587–1594} }
+ @article{4V_zquez_2023, title={Can identity fusion foster social harmony? Strongly fused individuals embrace familiar outgroup members unless threatened}, volume={107}, ISSN={0022-1031}, url={http://dx.doi.org/10.1016/j.jesp.2023.104462}, DOI={10.1016/j.jesp.2023.104462}, journal={Journal of Experimental Social Psychology}, publisher={Elsevier BV}, author={Vázquez, Alexandra and Gómez, Ángel and López-Rodríguez, Lucía and Swann, William B.}, year={2023}, month=jul, pages={104462} }
 
- @article{5Demeter_2023, title={Resting-state cortical hubs in youth organize into four categories}, volume={42}, ISSN={2211-1247}, url={http://dx.doi.org/10.1016/j.celrep.2023.112521}, DOI={10.1016/j.celrep.2023.112521}, number={5}, journal={Cell Reports}, publisher={Elsevier BV}, author={Demeter, Damion V. and Gordon, Evan M. and Nugiel, Tehila and Garza, AnnaCarolina and Larguinho, Tyler L. and Church, Jessica A.}, year={2023}, month=may, pages={112521} }
+ @article{5Ashokkumar_2022, title={Restoring Honor by Slapping or Disowning the Daughter}, volume={49}, ISSN={1552-7433}, url={http://dx.doi.org/10.1177/01461672221079106}, DOI={10.1177/01461672221079106}, number={6}, journal={Personality and Social Psychology Bulletin}, publisher={SAGE Publications}, author={Ashokkumar, Ashwini and Swann, William B.}, year={2022}, month=mar, pages={823–836} }
 
- @article{6Aizza_2023, title={Youth pre-pandemic executive function relates to year one COVID-19 difficulties}, volume={14}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/fpsyg.2023.1033282}, DOI={10.3389/fpsyg.2023.1033282}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Aizza, Alice and Porter, Blaire M. and Church, Jessica A.}, year={2023}, month=apr }
+ @article{6Dejonckheere_2022, title={Perceiving societal pressure to be happy is linked to poor well-being, especially in happy nations}, volume={12}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-021-04262-z}, DOI={10.1038/s41598-021-04262-z}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Dejonckheere, Egon and Rhee, Joshua J. and Baguma, Peter K. and Barry, Oumar and Becker, Maja and Bilewicz, Michał and Castelain, Thomas and Costantini, Giulio and Dimdins, Girts and Espinosa, Agustín and Finchilescu, Gillian and Friese, Malte and Gastardo-Conaco, Maria Cecilia and Gómez, Angel and González, Roberto and Goto, Nobuhiko and Halama, Peter and Hurtado-Parrado, Camilo and Jiga-Boy, Gabriela M. and Karl, Johannes A. and Novak, Lindsay and Ausmees, Liisi and Loughnan, Steve and Mastor, Khairul A. and McLatchie, Neil and Onyishi, Ike E. and Rizwan, Muhammad and Schaller, Mark and Serafimovska, Eleonora and Suh, Eunkook M. and Swann, William B. and Tong, Eddie M. W. and Torres, Ana and Turner, Rhiannon N. and Vinogradov, Alexander and Wang, Zhechen and Yeung, Victoria Wai-lan and Amiot, Catherine E. and Boonyasiriwat, Watcharaporn and Peker, Müjde and Van Lange, Paul A. M. and Vauclair, Christin-Melanie and Kuppens, Peter and Bastian, Brock}, year={2022}, month=feb }
 
- @article{7Davis_2022, title={Key considerations for child and adolescent MRI data collection}, volume={1}, ISSN={2813-1193}, url={http://dx.doi.org/10.3389/fnimg.2022.981947}, DOI={10.3389/fnimg.2022.981947}, journal={Frontiers in Neuroimaging}, publisher={Frontiers Media SA}, author={Davis, Brittany R. and Garza, AnnaCarolina and Church, Jessica A.}, year={2022}, month=sep }
+ @article{7Kowert_2022, title={Not just a game: Identity fusion and extremism in gaming cultures}, volume={7}, ISSN={2297-900X}, url={http://dx.doi.org/10.3389/fcomm.2022.1007128}, DOI={10.3389/fcomm.2022.1007128}, journal={Frontiers in Communication}, publisher={Frontiers Media SA}, author={Kowert, Rachel and Martel, Alexi and Swann, William B.}, year={2022}, month=oct }
 
- @article{8Garcini_2022, title={Increasing diversity in developmental cognitive neuroscience: A roadmap for increasing representation in pediatric neuroimaging research}, volume={58}, ISSN={1878-9293}, url={http://dx.doi.org/10.1016/j.dcn.2022.101167}, DOI={10.1016/j.dcn.2022.101167}, journal={Developmental Cognitive Neuroscience}, publisher={Elsevier BV}, author={Garcini, Luz M. and Arredondo, Maria M. and Berry, Obianuju and Church, Jessica A. and Fryberg, Stephanie and Thomason, Moriah E. and McLaughlin, Katie A.}, year={2022}, month=dec, pages={101167} }
+ @article{8Kirkland_2022, title={Social mindfulness predicts concern for nature and immigrants across 36 nations}, volume={12}, ISSN={2045-2322}, url={http://dx.doi.org/10.1038/s41598-022-25538-y}, DOI={10.1038/s41598-022-25538-y}, number={1}, journal={Scientific Reports}, publisher={Springer Science and Business Media LLC}, author={Kirkland, Kelly and Van Lange, Paul A. M. and Van Doesum, Niels J. and Acevedo-Triana, Cesar and Amiot, Catherine E. and Ausmees, Liisi and Baguma, Peter and Barry, Oumar and Becker, Maja and Bilewicz, Michal and Boonyasiriwat, Watcharaporn and Castelain, Thomas and Costantini, Giulio and Dimdins, Girts and Espinosa, Agustín and Finchilescu, Gillian and Fischer, Ronald and Friese, Malte and Gómez, Ángel and González, Roberto and Goto, Nobuhiko and Halama, Peter and Ilustrisimo, Ruby D. and Jiga-Boy, Gabriela M. and Kuppens, Peter and Loughnan, Steve and Markovik, Marijana and Mastor, Khairul A. and McLatchie, Neil and Novak, Lindsay M. and Onyishi, Ike E. and Peker, Müjde and Rizwan, Muhammad and Schaller, Mark and Suh, Eunkook M. and Swann, William B. and Tong, Eddie M. W. and Torres, Ana and Turner, Rhiannon N. and Vauclair, Christin-Melanie and Vinogradov, Alexander and Wang, Zhechen and Yeung, Victoria Wai Lan and Bastian, Brock}, year={2022}, month=dec }
 
- @article{9Barendse_2022, title={Longitudinal Change in Adolescent Depression and Anxiety Symptoms from before to during the <scp>COVID</scp>‐19 Pandemic}, volume={33}, ISSN={1532-7795}, url={http://dx.doi.org/10.1111/jora.12781}, DOI={10.1111/jora.12781}, number={1}, journal={Journal of Research on Adolescence}, publisher={Wiley}, author={Barendse, Marjolein E.A. and Flannery, Jessica and Cavanagh, Caitlin and Aristizabal, Melissa and Becker, Stephen P. and Berger, Estelle and Breaux, Rosanna and Campione‐Barr, Nicole and Church, Jessica A. and Crone, Eveline A. and Dahl, Ronald E. and Dennis‐Tiwary, Tracy A. and Dvorsky, Melissa R. and Dziura, Sarah L. and van de Groep, Suzanne and Ho, Tiffany C. and Killoren, Sarah E. and Langberg, Joshua M. and Larguinho, Tyler L. and Magis‐Weinberg, Lucía and Michalska, Kalina J. and Mullins, Jordan L. and Nadel, Hanna and Porter, Blaire M. and Prinstein, Mitchell J. and Redcay, Elizabeth and Rose, Amanda J. and Rote, Wendy M. and Roy, Amy K. and Sweijen, Sophie W. and Telzer, Eva H. and Teresi, Giana I. and Thomas, April Gile and Pfeifer, Jennifer H.}, year={2022}, month=jul, pages={74–91} }
+ @article{9Martel_2021, title={Why True Believers Make the Ultimate Sacrifice: Sacred Values, Moral Convictions, or Identity Fusion?}, volume={12}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/fpsyg.2021.779120}, DOI={10.3389/fpsyg.2021.779120}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Martel, Francois Alexi and Buhrmester, Michael and Gómez, Angel and Vázquez, Alexandra and Swann, William B.}, year={2021}, month=nov }
 
- @article{10Porter_2021, title={Examination of Pre-pandemic Measures on Youth Well-being During Early Stages of the COVID-19 Pandemic}, volume={1}, ISSN={2667-1743}, url={http://dx.doi.org/10.1016/j.bpsgos.2021.08.003}, DOI={10.1016/j.bpsgos.2021.08.003}, number={4}, journal={Biological Psychiatry Global Open Science}, publisher={Elsevier BV}, author={Porter, Blaire M. and Douglas, Ian J. and Larguinho, Tyler L. and Aristizabal, Melissa and Mitchell, Mackenzie E. and Roe, Mary Abbe and Church, Jessica A.}, year={2021}, month=dec, pages={252–260} }
+ @article{10Talaifar_2020, title={Asymmetries in Mutual Understanding: People With Low Status, Power, and Self-Esteem Understand Better Than They Are Understood}, volume={16}, ISSN={1745-6924}, url={http://dx.doi.org/10.1177/1745691620958003}, DOI={10.1177/1745691620958003}, number={2}, journal={Perspectives on Psychological Science}, publisher={SAGE Publications}, author={Talaifar, Sanaz and Buhrmester, Michael D. and Ayduk, Özlem and Swann, William B.}, year={2020}, month=oct, pages={338–357} }
 
- @article{11Garza_2021, title={A Core Set of Brain Regions Helps Kids Achieve Their Goals}, volume={9}, ISSN={2296-6846}, url={http://dx.doi.org/10.3389/frym.2021.618432}, DOI={10.3389/frym.2021.618432}, journal={Frontiers for Young Minds}, publisher={Frontiers Media SA}, author={Garza, AnnaCarolina and Aizza, Alice and Charoenworawat, Janchira K. and Church, Jessica A.}, year={2021}, month=aug }
+ @article{11Talaifar_2020, title={A New Pathway to University Retention? Identity Fusion With University Predicts Retention Independently of Grades}, volume={12}, ISSN={1948-5514}, url={http://dx.doi.org/10.1177/1948550619894995}, DOI={10.1177/1948550619894995}, number={1}, journal={Social Psychological and Personality Science}, publisher={SAGE Publications}, author={Talaifar, Sanaz and Ashokkumar, Ashwini and Pennebaker, James W. and Medrano, Fortunato N. and Yeager, David S. and Swann, William B.}, year={2020}, month=feb, pages={108–117} }
 
- @article{12Church_2021, title={The Role of Neural and Genetic Processes in Learning to Read and Specific Reading Disabilities: Implications for Instruction}, volume={58}, ISSN={1936-2722}, url={http://dx.doi.org/10.1002/rrq.439}, DOI={10.1002/rrq.439}, number={2}, journal={Reading Research Quarterly}, publisher={Wiley}, author={Church, Jessica A. and Grigorenko, Elena L. and Fletcher, Jack M.}, year={2021}, month=aug, pages={203–219} }
-
- @article{13Zheng_2021, title={A Developmental Eye Tracking Investigation of Cued Task Switching Performance}, volume={92}, ISSN={1467-8624}, url={http://dx.doi.org/10.1111/cdev.13478}, DOI={10.1111/cdev.13478}, number={4}, journal={Child Development}, publisher={Wiley}, author={Zheng, Annie and Church, Jessica A.}, year={2021}, month=jan, pages={1652–1672} }
-
- @article{14Roe_2021, title={Error-signaling in the developing brain}, volume={227}, ISSN={1053-8119}, url={http://dx.doi.org/10.1016/j.neuroimage.2020.117621}, DOI={10.1016/j.neuroimage.2020.117621}, journal={NeuroImage}, publisher={Elsevier BV}, author={Roe, Mary Abbe and Engelhardt, Laura E. and Nugiel, Tehila and Harden, K. Paige and Tucker-Drob, Elliot M. and Church, Jessica A.}, year={2021}, month=feb, pages={117621} }
+ @article{12G_mez_2021, title={Why People Enter and Embrace Violent Groups}, volume={11}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/fpsyg.2020.614657}, DOI={10.3389/fpsyg.2020.614657}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Gómez, Ángel and Martínez, Mercedes and Martel, Francois Alexi and López-Rodríguez, Lucía and Vázquez, Alexandra and Chinchilla, Juana and Paredes, Borja and Hettiarachchi, Mal and Hamid, Nafees and Swann, William B.}, year={2021}, month=jan }
 
